# poppy-com

./: .Doxyfile  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  bootloader.c  index.html  params.json  template.c  test.mk  toolchain.cmake
Docs/html/: _r_e_a_d_m_e_8md_source.html  annotated.html  atmega328p_2hal_8c_source.html  atmega328p_2hal_8cpp_source.html  atmega328p_2hal_8d_source.html  atmega328p_2hal_8h_source.html  atmega328p_2halboot_8c_source.html  atmega328p_2halboot_8h_source.html  atmega64_2hal_8c_source.html  atmega64_2hal_8cpp_source.html  atmega64_2hal_8h_source.html  atmega64_2halboot_8c_source.html  atmega64_2halboot_8h_source.html  bootloader_8c_source.html  bootloader_8d_source.html  classes.html  config_8h_source.html  context_8h_source.html  dir_000001_000004.html  dir_000006_000009.html  dir_000007_000000.html  dir_000008_000000.html  dir_000013_000004.html  dir_000015_000006.html  dir_042e0079ce558895f72705d385019ae9.html  dir_042e0079ce558895f72705d385019ae9_dep.map  dir_042e0079ce558895f72705d385019ae9_dep.md5  dir_0a9f9d6847211a7eb8d69a2fe41cfaeb.html  dir_0a9f9d6847211a7eb8d69a2fe41cfaeb_dep.map  dir_0a9f9d6847211a7eb8d69a2fe41cfaeb_dep.md5  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_15fd98444ac8874012e7d99eefd21626.html  dir_15fd98444ac8874012e7d99eefd21626_dep.map  dir_196d40b3dde16bbc6d3dab43c34f1ca2.html  dir_196d40b3dde16bbc6d3dab43c34f1ca2_dep.map  dir_196d40b3dde16bbc6d3dab43c34f1ca2_dep.md5  dir_1a8a85215610c2904586d4d6e3e2a978.html  dir_1a8a85215610c2904586d4d6e3e2a978_dep.map  (+181 more)
Docs/latex/: annotated.tex  dir_042e0079ce558895f72705d385019ae9.tex  dir_0a9f9d6847211a7eb8d69a2fe41cfaeb.tex  dir_13e138d54eb8818da29c3992edef070a.tex  (+85 more)
board_test/: board_test.atsln
ci/: after_success.sh  install.sh  script.sh
discovery_test/: discovery_test.atsln
doc/: hal_creation.md  protocol_definition.md  travis_encrypt.md
extra/: .Doxyfile
include/: config.h  context.h  i2c_master.h  i2c_slave.h  poppyNetwork.h
poppy-com/: platform.txt  poppyNetwork.h
src/: config.h  context.h  i2c_master.c  i2c_master.h  i2c_slave.c  i2c_slave.h  mod_list.h  poppyNetwork.c  poppyNetwork.h
test/: CMakeLists.txt  test.c
(+169 files in other folders)
